# Resume_Manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: profile.json
resume_manager/: __init__.py  ats.py  authorize.py  config.py  gdrive.py  jd_parser.py  render.py  server.py
